Html pages Home, PatientList, PatientSearch and PatientInfo done

--- a/patientui/src/main/resources/templates/PatientList.html
+++ b/patientui/src/main/resources/templates/PatientList.html
@@ -9,7 +9,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 	rel="stylesheet"/>
 
-<title>Home</title>
+<title>Patient List</title>
 
 </head>
 <body>
@@ -24,15 +24,37 @@
 		</div>
 		<div class="row">
 			<ul class="nav justify-content-end text-white bg-primary">
-				<li class="mx-2">Home</li>
-				<li class="mx-2"><a style="color: white;" th:href="@{PatientList}">Patient list</a></li>
+				<li class="mx-2"><a style="color: white;" th:href="@{/}">Home</a></li>
+				<li class="mx-2">Patient list</li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientSearch}">Patient search</a></li>
 			</ul>
 		</div>
 		
 	
 		<div class="row col-md-8 col-xs-12 mx-auto mt-4">
-			<p class="fs-1 mb-0">Welcome</p>
+			<p class="fs-3 text-primary mb-0">Patient list</p>
+			<table class="table table-striped border border-secondary text-center">
+				<thead class="text-white bg-primary">
+					<tr>
+						<th>Last name</th>
+						<th>First name</th>
+						<th>Birthday</th>
+						<th>Sex</th>
+						<th>Address</th>
+						<th>Phone</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="patient:${patients}">
+						<td th:text="${patient.family}">Last name</td>
+						<td th:text="${patient.given}">First name</td>
+						<td th:text="${patient.dob}">Birthday</td>
+						<td th:text="${patient.sex}">Sex</td>
+						<td th:text="${patient.address}">Address</td>
+						<td th:text="${patient.phone}">Phone</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	
 	</div>
