--- a/patientui/src/main/resources/templates/PatientSearch.html
+++ b/patientui/src/main/resources/templates/PatientSearch.html
@@ -44,6 +44,7 @@
 					<input type="text" th:field="*{given}" class="form-control" placeholder="First name" />
 					<span class="text-danger" th:errors="*{given}"></span>
 				</div>
+				<div class="text-danger" th:if="${errorMessage}" th:text="${errorMessage}"></div>
 				<div class="form-group">
 					<button class="btn btn-primary" type="submit">&#8981; Search</button>
 				</div>
