Update test added to PatientInfoControllerTest

--- a/patientui/src/main/resources/templates/PatientInfo.html
+++ b/patientui/src/main/resources/templates/PatientInfo.html
@@ -35,11 +35,11 @@
 			<p class="fs-3 text-primary mb-2 border-bottom">Patient information</p>
 			<p>
 				<span class="text-primary fw-bold">Last name :&#160;</span>
-				<span th:text="${patient.family}">Last name</span>
+				<span th:text="${patient.family}" style="text-transform: capitalize;">Last name</span>
 			</p>
 			<p>
 				<span class="text-primary fw-bold">Last name :&#160;</span>
-				<span th:text="${patient.given}">First name</span>
+				<span th:text="${patient.given}" style="text-transform: capitalize;">First name</span>
 			</p>
 			<p>
 				<span class="text-primary fw-bold">Birthday :&#160;</span>
