--- a/patientui/src/main/resources/templates/PatientSearch.html
+++ b/patientui/src/main/resources/templates/PatientSearch.html
@@ -9,7 +9,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 	rel="stylesheet" />
 
-<title>Patient List</title>
+<title>Patient search</title>
 
 </head>
 <body>
@@ -68,8 +68,8 @@
 				</thead>
 				<tbody>
 					<tr th:each="patient:${patients}">
-						<td th:text="${patient.family}">Last name</td>
-						<td th:text="${patient.given}">First name</td>
+						<td th:text="${patient.family}" style="text-transform: capitalize;">Last name</td>
+						<td th:text="${patient.given}" style="text-transform: capitalize;">First name</td>
 						<td th:text="${patient.dob}">Birthday</td>
 						<td th:text="${patient.sex}">Sex</td>
 						<td th:text="${patient.address}">Address</td>
