--- a/patientui/src/main/resources/templates/PatientUpdate.html
+++ b/patientui/src/main/resources/templates/PatientUpdate.html
@@ -43,12 +43,12 @@
 					style="width: 100%">
 					<div class="form-group">
 						<label class="control-label">Last name</label> 
-						<input type="text" th:field="*{family}" class="form-control" /> 
+						<input type="text" th:field="*{family}" class="form-control" style="text-transform: capitalize;"/> 
 						<span class="text-danger" th:errors="*{family}"></span>
 					</div>
 					<div class="form-group">
 						<label class="control-label">First name</label> 
-						<input type="text" th:field="*{given}" class="form-control" /> 
+						<input type="text" th:field="*{given}" class="form-control" style="text-transform: capitalize;"/> 
 						<span class="text-danger" th:errors="*{given}"></span>
 					</div>
 					<div class="form-group">
