Create patient method added in Patientui

--- a/patientui/src/main/resources/templates/Home.html
+++ b/patientui/src/main/resources/templates/Home.html
@@ -27,6 +27,7 @@
 				<li class="mx-2">Home</li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientList}">Patient list</a></li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientSearch}">Patient search</a></li>
+				<li class="mx-2"><a style="color: white;" th:href="@{PatientCreate}">New patient</a></li>
 			</ul>
 		</div>
 		
