--- a/patientui/src/main/resources/templates/PatientList.html
+++ b/patientui/src/main/resources/templates/PatientList.html
@@ -27,6 +27,7 @@
 				<li class="mx-2"><a style="color: white;" th:href="@{/}">Home</a></li>
 				<li class="mx-2">Patient list</li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientSearch}">Patient search</a></li>
+				<li class="mx-2"><a style="color: white;" th:href="@{PatientCreate}">New patient</a></li>
 			</ul>
 		</div>
 		
