--- a/patientui/src/main/resources/templates/NoteUpdate.html
+++ b/patientui/src/main/resources/templates/NoteUpdate.html
@@ -9,7 +9,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 	rel="stylesheet"/>
 
-<title>Note List</title>
+<title>Note Update</title>
 
 </head>
 <body>
@@ -34,23 +34,20 @@
 	
 		<div class="row col-md-8 col-xs-12 mx-auto mt-4">
 			<p class="fs-3 text-primary mb-0">
+				<span class="mx-2">Update</span>
 				<span class="mx-2" th:text="${patient.family}"></span>
 				<span class="mx-2" th:text="${patient.given}"></span>
-				<span class="mx-2">notes</span>
+				<span class="mx-2">note</span>
 			</p>
 			
-			<div th:each="note:${notes}">
-    			<p class="mb-0" th:text="${#temporals.format(note.date, 'yyyy-MM-dd')}">Date</p>
- 			   	<div class="m-0 p-2 border border-primary">
-		        	<span th:text="${note.body}">Body</span>
-        			<a class="bg-primary p-1"
-        				style="color: white; text-decoration: none; float: right;" 
-        				th:href="@{NoteUpdate(id=${note.id})}">Modify
-        			</a>
-    			</div>
+			<div class="row">
+				<form action="#" th:action="@{/NoteUpdate(id=${note.id})}" th:object="${note}" method="post">
+					<label class="control-label" th:text="${#temporals.format(note.date, 'yyyy-MM-dd')}">Date</label> 
+					<textarea rows="10" th:field="*{body}" class="form-control">Body</textarea>
+					<button type="submit" class="btn btn-primary">Modify</button>	
+				</form>
 			</div>
 		</div>
-	
 	</div>
 	
 	<!-- Bootstrap JS bundle -->
