Create note functionality done

--- a/patientui/src/main/resources/templates/NoteUpdate.html
+++ b/patientui/src/main/resources/templates/NoteUpdate.html
@@ -28,7 +28,7 @@
 				<li class="mx-2"><a style="color: white;"	th:href="@{PatientList}">Patient list</a></li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientSearch}">Patient search</a></li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientCreate}">New patient</a></li>
-				<li class="mx-2"><a style="color: white;" th:href="@{PatientInfo(id=${patient.id})}">Back</a></li>
+				<li class="mx-2"><a style="color: white;" th:href="@{NoteList(patId=${patient.id})}">Back</a></li>
 			</ul>
 		</div>
 	
