--- a/patientui/src/main/resources/templates/NoteCreate.html
+++ b/patientui/src/main/resources/templates/NoteCreate.html
@@ -9,7 +9,7 @@
 	href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
 	rel="stylesheet"/>
 
-<title>Note List</title>
+<title>Note Create</title>
 
 </head>
 <body>
@@ -28,36 +28,26 @@
 				<li class="mx-2"><a style="color: white;"	th:href="@{PatientList}">Patient list</a></li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientSearch}">Patient search</a></li>
 				<li class="mx-2"><a style="color: white;" th:href="@{PatientCreate}">New patient</a></li>
-				<li class="mx-2"><a style="color: white;" th:href="@{PatientInfo(id=${patient.id})}">Back</a></li>
+				<li class="mx-2"><a style="color: white;" th:href="@{NoteList(patId=${patient.id})}">Back</a></li>
 			</ul>
 		</div>
 	
 		<div class="row col-md-8 col-xs-12 mx-auto mt-4">
 			<p class="fs-3 text-primary mb-0">
+				<span class="mx-2">Create</span>
 				<span class="mx-2" th:text="${patient.family}"></span>
 				<span class="mx-2" th:text="${patient.given}"></span>
-				<span class="mx-2">notes</span>
+				<span class="mx-2">note</span>
 			</p>
 			
-			<div>
-				<a class="bg-primary p-1"
-       				style="color: white; text-decoration: none; float: right;" 
-       				th:href="@{NoteCreate(patId=${patient.id})}">New note
-       			</a>
-			</div>
-			
-			<div th:each="note:${notes}">
-    			<p class="mb-0" th:text="${#temporals.format(note.date, 'yyyy-MM-dd')}">Date</p>
- 			   	<div class="m-0 p-2 border border-primary">
-		        	<span th:text="${note.body}">Body</span>
-        			<a class="bg-primary p-1"
-        				style="color: white; text-decoration: none; float: right;" 
-        				th:href="@{NoteUpdate(id=${note.id})}">Modify
-        			</a>
-    			</div>
+			<div class="row">
+				<form action="#" th:action="@{/NoteCreate(patId=${patient.id})}" th:object="${note}" method="post">
+					<label class="control-label" th:text="${#temporals.format(note.date, 'yyyy-MM-dd')}">Date</label> 
+					<textarea rows="10" th:field="*{body}" class="form-control">Body</textarea>
+					<button type="submit" class="btn btn-primary">Create</button>	
+				</form>
 			</div>
 		</div>
-	
 	</div>
 	
 	<!-- Bootstrap JS bundle -->
